[gd_scene load_steps=5 format=2]

[ext_resource path="res://table.png" type="Texture" id=1]
[ext_resource path="res://scenes/Mixing Table.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 34.7351, 12.8576 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 29.7421, 8.97409 )

[node name="Mixing Table" type="StaticBody2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2048
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -3.0513, 0 )
shape = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -3.0513, 0 )
shape = SubResource( 2 )

[node name="Potion1" type="Node2D" parent="."]
position = Vector2( -14.979, -10 )

[node name="Potion2" type="Node2D" parent="."]
position = Vector2( 9.431, -10 )

[node name="ResultPotion" type="Node2D" parent="."]
position = Vector2( 0, -23.8695 )
